Actualización del conjunto de datos y diseño de informes
Se han realizado cambios significativos en la estructura y diseño del conjunto de datos en el proyecto de farmacia. Se ha añadido un código extenso en `DatosFarmacia.Designer.cs` para definir un conjunto de datos fuertemente tipado y se han actualizado los archivos XML relacionados (`.xsc`, `.xsd`, `.xss`) para reflejar la nueva configuración y diseño.

Además, se han eliminado referencias a paquetes de FastReport en `Farmacia.csproj`, indicando un cambio en la gestión de informes. Se han modificado los informes `facturaReport.rdlc` e `informeVentas.rdlc` para incluir nuevos elementos de diseño y campos relevantes, y se ha añadido una instancia de `Pruebaxsd` en `frmInformes.Designer.cs` para utilizar el nuevo conjunto de datos.

--- a/Farmacia/Farmacia.csproj
+++ b/Farmacia/Farmacia.csproj
@@ -9,17 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastReport.Data.Postgres" Version="2025.2.3" />
-    <PackageReference Include="FastReport.OpenSource" Version="2025.2.0" />
-    <PackageReference Include="FastReport.OpenSource.Data.Postgres" Version="2021.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\entidades\entidades.csproj" />
     <ProjectReference Include="..\negocio\negocio.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="DatosFarmacia.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>DatosFarmacia.xsd</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -59,6 +58,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="DatosFarmacia.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DatosFarmacia.Designer.cs</LastGenOutput>
+    </None>
     <None Update="Pruebaxsd.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>Pruebaxsd.Designer.cs</LastGenOutput>
